# python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dewey/: __init__.py  client.py  types.py
dewey/resources/: __init__.py  agents.py  claims.py  collections.py  contradictions.py  documents.py  duplicates.py  provider_keys.py  research.py  retrieval.py  sections.py
tests/: test_agents.py  test_client.py  test_collections.py  test_contradictions.py  test_documents.py  test_research.py  test_retrieval.py
