[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetdewey"
version = "1.2.0"
description = "Python client for the Dewey API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://meetdewey.com"
Repository = "https://github.com/meetdewey/python-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["dewey*"]
